--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "~13.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "autoprefixer": "^10.4.0",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
